--- a/kickstarter.html
+++ b/kickstarter.html
@@ -10,15 +10,15 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gabriela" rel="stylesheet">
-    <link href="css/styles_k.css" rel="stylesheet">
     <link href="css/w3.css" rel="stylesheet">
+    <link href="css/styles_k.css" rel="stylesheet">
 </head>
 
 <body>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-xs-10 col-sm-12 text-center">
+                <div class="col-xs-12 col-sm-10 col-sm-offset-1 text-center back">
                     <h1>ГОЛУБЫЕ КУПОЛА <br>И ОРАНЖЕВЫЕ КРЫШИ</h1>
                     <h2>Истории о жизни мальчика Барзу и об окружающем его мире удивительных вещей и восточных легенд
                     </h2>
@@ -32,7 +32,7 @@
         <div class="row row-content ">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                 <div class="videoWrapper">
-                    <iframe src="https://www.youtube.com/embed/b1PC0QjsbvQ" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/woo_GK_NzFY" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -46,10 +46,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-sm-1 ornam">
+            <div class="col-xs-2 col-sm-1 ornam">
                 <img src="img/orn.png" alt="">
             </div>
-            <div class="col-xs-12 col-sm-10">
+            <div class="col-xs-10 col-sm-10">
                 <h2>Описание книги:</h2>
                 <ul>
                     <li>Твердый переплет, плотная бумага</li>
@@ -66,10 +66,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-sm-1 ornam">
+            <div class="col-xs-2 col-sm-1 ornam">
                 <img src="img/orn.png" alt="">
             </div>
-            <div class="col-xs-12 col-sm-10">
+            <div class="col-xs-10 col-sm-10">
                 <h2>Эту уникальную книгу можно использовать:</h2>
                 <ol>
                     <li>Для развития русского и английского языков в билингвальной среде.</li>
@@ -113,10 +113,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-sm-1 ornam">
+            <div class="col-xs-2 col-sm-1 ornam">
                 <img src="img/orn.png" alt="">
             </div>
-            <div class="col-xs-12 col-sm-10">
+            <div class="col-xs-10 col-sm-10">
                 <h2>Для какого возраста эта книга?</h2>
                 <p>Для детей от 3 до 12 лет. Моя задача состояла в том, чтобы сделать книгу интересной и понятной не только
                     для детей разного возраста, но и для их родителей. Таким образом, книга разделилась на несколько частей:
@@ -142,10 +142,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-sm-1 ornam">
+            <div class="col-xs-2 col-sm-1 ornam">
                 <img src="img/orn.png" alt="">
             </div>
-            <div class="col-xs-12 col-sm-10">
+            <div class="col-xs-10 col-sm-10">
                 <h2>Как и почему я написала эту книгу</h2>
                 <p>Самая главная причина создания этой книги – это появление на свет моих детей. А когда у нас появляются дети,
                     мы хотим в первую очередь поделиться с ними своим мироощущением, своими ценностями и привить любовь к
@@ -194,10 +194,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-sm-1 ornam">
+            <div class="col-xs-2 col-sm-1 ornam">
                 <img src="img/orn.png" alt="">
             </div>
-            <div class="col-xs-12 col-sm-10">
+            <div class="col-xs-10 col-sm-10">
                 <h2>Первые отзывы о книге!</h2>
                 <p class="story"><b> Ирина из Бостона (мама Пети (6 лет) и Миши (4 года)</b></p>
                 <p class="story">Моим детям очень понравилось разглядывать детали на рисунках, соотносить их с текстом и задавать вопросы.
@@ -235,10 +235,10 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-12 col-sm-1 ornam">
+            <div class="col-xs-2 col-sm-1 ornam">
                 <img src="img/orn.png" alt="">
             </div>
-            <div class="col-xs-12 col-sm-10">
+            <div class="col-xs-10 col-sm-10">
                 <h2>Создатели</h2>
                 <img src="img/autors.png" class="img-responsive img-thumbnail">
                 <p><b>Марина Эйбрамс</b> – автор идеи и серии книг «Барзу и его мир»; руководитель проекта и основательница
@@ -400,7 +400,7 @@
             <div class="col-xs-12">
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
-                        <h4>1 Книга ВАМ + 1 книга ДЕТЯМ + Альбом-раскраска<br>1 GET + 1 GIVE + Coloring book</h4>
+                        <h4>1 Книга ВАМ + 1 книга ДЕТЯМ <br>+ Альбом-раскраска<br>1 GET + 1 GIVE + Coloring book</h4>
                         <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank"  class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$47</a>
                     </header>
                     <div class="w3-container">
@@ -484,10 +484,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-sm-1 ornam">
+            <div class="col-xs-2 col-sm-1 ornam">
                 <img src="img/orn.png" alt="">
             </div>
-            <div class="col-xs-12 col-sm-10">
+            <div class="col-xs-10 col-sm-10">
                 <h2>Книги в подарок для Центра адаптации детей беженцев Комитета «Гражданского содействия»</h2>
                 <p>
                     Я очень надеюсь, что, благодаря Вашему милосердию и щедрости, мы сможем подарить некоторое количество книг Центру адаптации
@@ -506,10 +506,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-sm-1 ornam">
+            <div class="col-xs-2 col-sm-1 ornam">
                 <img src="img/orn.png" alt="">
             </div>
-            <div class="col-xs-12 col-sm-10">
+            <div class="col-xs-10 col-sm-10">
                 <h2>График проекта</h2>
                 <p><span>Июль:</span> Обработка данных и перевод денежных средств от Kickstarter. Уточнение у взносчиков на
                     каком языке они хотят получить книги. Отправка электронного альбома-раскраски и других вознаграждений,
