--- a/kickstarter.html
+++ b/kickstarter.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <title>KICKSTARTER</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -295,25 +295,26 @@
             </div>
         </div>
         <div class="row cards">
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-xs-12 col-sm-6">
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Эксклюзивный значок<br>EXCLUSIVE PIN BUTTON</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank"  class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$5</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$5</a>
                     </header>
                     <div class="w3-container">
                         <p>В качестве огромного «СПАСИБО»<br> мы отправим Вам наш эксклюзивный значок с изображением главного
-                            героя книги.<br>&nbsp;<br>&nbsp;
+                            героя книги.<br>&nbsp;
                         </p>
                         <img src="img/pin1.jpg" alt="" class="img-responsive" width="250">
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-4">
+
+            <div class="col-xs-12 col-sm-6">
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Черно-белые значки<br>BLACK AND WHITE PINS</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank"  class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$10</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$10</a>
                     </header>
                     <div class="w3-container">
                         <p>Четыре эксклюзивных черно-белых круглых значка с изображениями по мотивам книги. Эти значки очень
@@ -324,7 +325,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-4">
+        </div>
+        <div class="row cards">
+            <div class="col-xs-12 col-sm-6">
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Цветные значки<br>MULTI-COLORED PINS</h4>
@@ -338,44 +341,44 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row cards">
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-xs-12 col-sm-6">
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Альбом-раскраска<br>COLORING BOOK</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank"  class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$12</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$12</a>
                     </header>
                     <div class="w3-container">
                         <p>Электронная версия альбома-раскраски «Барзу и его мир». Вы сможете распечатать ее множество раз и
-                            в любое время. 25 уникальных иллюстраций по мотивам книги.</p>
-                        <img src="img/coloring book.jpg" alt="" class="img-responsive">
+                            в любое время. 25 уникальных иллюстраций по мотивам книги.<br>&nbsp;</p>
+                        <img src="img/coloring book.jpg" alt="" class="img-responsive" width="341">
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-4">
+        </div>
+        <div class="row cards">
+
+            <div class="col-xs-12 col-sm-6">
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Красочные открытки<br>COLORFUL GREETING CARDS</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank"  class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$13</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$13</a>
                     </header>
                     <div class="w3-container">
                         <p>Эксклюзивный набор из 6 открыток с копиями иллюстраций из книги на внешней стороне открытки. Внутренние
-                            страницы открытки пустые. Набор также включает конверты.</p>
-                        <img src="img/post cards.jpg" alt="" class="img-responsive">
+                            страницы открытки пустые. Набор также включает конверты. <br>&nbsp;</p>
+                        <img src="img/post cards.jpg" alt="" class="img-responsive" width="350"> 
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-xs-12 col-sm-6">
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Книга ДЕТЯМ<br>DONATE THE BOOK</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank"  class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$21</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$21</a>
                     </header>
                     <div class="w3-container">
                         <p>Подарите книгу детям в Центре адаптации детей беженцев.<br>Почтовые расходы в этом случае я возьму
                             на себя.
-                            <br>&nbsp;<br>&nbsp;
                         </p>
                         <img src="img/bookcover.png" alt="" class="img-responsive">
                     </div>
@@ -401,7 +404,7 @@
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>1 Книга ВАМ + 1 книга ДЕТЯМ <br>+ Альбом-раскраска<br>1 GET + 1 GIVE + Coloring book</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank"  class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$47</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$47</a>
                     </header>
                     <div class="w3-container">
                         <p>Давайте поможем незащищенным детям почувствовать себя долгожданными гостями в этом мире! Подарим
@@ -418,7 +421,7 @@
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Книга с автографом<br>PERSONALIZED BOOK</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank"  class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$65</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$65</a>
                     </header>
                     <div class="w3-container">
                         <p>А хотите книгу с пожеланиями от самого автора именно для Вашего малыша или малышей? Да еще и несколько
@@ -448,7 +451,7 @@
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Полный пакет<br>FULL PACK</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank"  class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$80</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$80</a>
                     </header>
                     <div class="w3-container">
                         <p>1 книга – Вам, 1 книга – детям в Центре адаптации детей беженцев, 1 электронная версия альбома-раскраски,
@@ -597,8 +600,9 @@
                     </div>
                 </div>
             </div>
-                
-                <script src="js/jquery.min.js"></script>
-                <script src="js/bootstrap.min.js"></script>
+
+            <script src="js/jquery.min.js"></script>
+            <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
