--- a/kickstarter.html
+++ b/kickstarter.html
@@ -32,14 +32,16 @@
         <div class="row row-content ">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                 <div class="videoWrapper">
-                    <iframe src="https://www.youtube.com/embed/woo_GK_NzFY" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/9OqLqR2Rpyg" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
                 <h3 class="info">Information in English and the main crowdfunding KICKSTARTER page is
-                    <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank">HERE</a></h3>
+                    <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-btn w3-round-large w3-hover-purple w3-indigo">HERE</a></h3>
+                <h3 class="info">Главная страница проекта на английском языке находиться
+                    <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-btn w3-round-large w3-hover-purple w3-indigo">ЗДЕСЬ</a></h3>
                 <p>При выборе плана не переживайте по поводу языковой версии книги. По окончании кампании по сбору средств я
                     свяжусь с Вами по электронной почте и уточню, на каком языке Вы хотите получить книгу(и) – на русском
                     или на английском.</p>
@@ -218,7 +220,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
                 <p class="story"><b> Шанталь из Берлина (8 лет)</b></p>
-                <img src="img/writing.png" class="img-responsive img-thumbnail">
+                <img src="img/writing.png" class="img-responsive img-thumbnail" alt="writing">
             </div>
         </div>
 
@@ -240,7 +242,7 @@
             </div>
             <div class="col-xs-10 col-sm-10">
                 <h2>Создатели</h2>
-                <img src="img/autors.png" class="img-responsive img-thumbnail">
+                <img src="img/autors.png" class="img-responsive img-thumbnail" alt="autors">
                 <p><b>Марина Эйбрамс</b> – автор идеи и серии книг «Барзу и его мир»; руководитель проекта и основательница
                     «Barzu World». Окончила Школу-Гимназию №134 г. Алматы в Казахстане, группа филологов (Ф-7). Затем училась
                     в Казахском государственном университете международных отношений и мировых языков им. Абылайхана по специальности
@@ -299,7 +301,7 @@
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Эксклюзивный значок<br>EXCLUSIVE PIN BUTTON</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$5</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right btn1">$5</a>
                     </header>
                     <div class="w3-container">
                         <p>В качестве огромного «СПАСИБО»<br> мы отправим Вам наш эксклюзивный значок с изображением главного
@@ -314,7 +316,7 @@
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Черно-белые значки<br>BLACK AND WHITE PINS</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$10</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right btn1">$10</a>
                     </header>
                     <div class="w3-container">
                         <p>Четыре эксклюзивных черно-белых круглых значка с изображениями по мотивам книги. Эти значки очень
@@ -331,7 +333,7 @@
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Цветные значки<br>MULTI-COLORED PINS</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$11</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right btn1">$11</a>
                     </header>
                     <div class="w3-container">
                         <p>Четыре эксклюзивных разноцветных круглых значка. На них изображены части иллюстраций из книги. Эти
@@ -345,12 +347,12 @@
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Альбом-раскраска<br>COLORING BOOK</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$12</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right btn1">$12</a>
                     </header>
                     <div class="w3-container">
                         <p>Электронная версия альбома-раскраски «Барзу и его мир». Вы сможете распечатать ее множество раз и
                             в любое время. 25 уникальных иллюстраций по мотивам книги.<br>&nbsp;</p>
-                        <img src="img/coloring book.jpg" alt="" class="img-responsive" width="341">
+                        <img src="img/coloringbook.jpg" alt="" class="img-responsive" width="341">
                     </div>
                 </div>
             </div>
@@ -361,12 +363,12 @@
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Красочные открытки<br>COLORFUL GREETING CARDS</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$13</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right btn1">$13</a>
                     </header>
                     <div class="w3-container">
                         <p>Эксклюзивный набор из 6 открыток с копиями иллюстраций из книги на внешней стороне открытки. Внутренние
                             страницы открытки пустые. Набор также включает конверты. <br>&nbsp;</p>
-                        <img src="img/post cards.jpg" alt="" class="img-responsive" width="350"> 
+                        <img src="img/postcards.jpg" alt="" class="img-responsive" width="350">
                     </div>
                 </div>
             </div>
@@ -374,7 +376,7 @@
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Книга ДЕТЯМ<br>DONATE THE BOOK</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$21</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right btn1">$21</a>
                     </header>
                     <div class="w3-container">
                         <p>Подарите книгу детям в Центре адаптации детей беженцев.<br>Почтовые расходы в этом случае я возьму
@@ -390,7 +392,7 @@
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>КНИГА<br>BOOK</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$25</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right btn1">$25</a>
                     </header>
                     <div class="w3-container">
                         <p>В ваших руках первое издание книги. Твердый переплет, размер 310х280мм, примерно 80 - 88 страниц,
@@ -404,7 +406,7 @@
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>1 Книга ВАМ + 1 книга ДЕТЯМ <br>+ Альбом-раскраска<br>1 GET + 1 GIVE + Coloring book</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$47</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right btn1">$47</a>
                     </header>
                     <div class="w3-container">
                         <p>Давайте поможем незащищенным детям почувствовать себя долгожданными гостями в этом мире! Подарим
@@ -421,7 +423,7 @@
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Книга с автографом<br>PERSONALIZED BOOK</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$65</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right btn1">$65</a>
                     </header>
                     <div class="w3-container">
                         <p>А хотите книгу с пожеланиями от самого автора именно для Вашего малыша или малышей? Да еще и несколько
@@ -437,7 +439,7 @@
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Тройной пакет<br>TRIPLE PACK</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$69</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right btn1">$69</a>
                     </header>
                     <div class="w3-container">
                         <p>Вы получаете 3 копии книги. Ваш выбор на каком языке будет каждая книга: на английском или на русском.
@@ -451,7 +453,7 @@
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Полный пакет<br>FULL PACK</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$80</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right btn1">$80</a>
                     </header>
                     <div class="w3-container">
                         <p>1 книга – Вам, 1 книга – детям в Центре адаптации детей беженцев, 1 электронная версия альбома-раскраски,
@@ -466,7 +468,7 @@
                 <div class="w3-card-12">
                     <header class="w3-container w3-blue">
                         <h4>Восточная сказка<br>EASTERN TALE</h4>
-                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right">$210</a>
+                        <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-button w3-round-large w3-hover-purple w3-indigo w3-right btn1">$210</a>
                     </header>
                     <div class="w3-container">
                         <p>Получите 1 книгу, 1 электронную версию альбома-раскраски, и визит автора на детском мероприятии или
@@ -483,7 +485,7 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-12">
-                <img src="img/support.jpg" class="img-responsive">
+                <img src="img/support.jpg" class="img-responsive" alt="support">
             </div>
         </div>
         <div class="row">
@@ -600,9 +602,15 @@
                     </div>
                 </div>
             </div>
-
-            <script src="js/jquery.min.js"></script>
-            <script src="js/bootstrap.min.js"></script>
+        </div>
+    </div>
+    <footer>
+        <div class="text-center">
+            <p> developed by Tatiana Shchelokova</p>
+        </div>
+    </footer>
+    <script type="text/javascript" src="js/jquery.min.js" async></script>
+    <script type="text/javascript" src="js/bootstrap.min.js" async></script>
 </body>
 
 </html>
