--- a/kickstarter.html
+++ b/kickstarter.html
@@ -39,9 +39,9 @@
         <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
                 <h3 class="info">Information in English and the main crowdfunding KICKSTARTER page is
-                    <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-btn w3-round-large w3-hover-purple w3-indigo">HERE</a></h3>
-                <h3 class="info">Главная страница проекта на английском языке находиться
-                    <a href="https://www.kickstarter.com/projects/1273236418/1517247103?token=839857c1" target="_blank" class="w3-btn w3-round-large w3-hover-purple w3-indigo">ЗДЕСЬ</a></h3>
+                    <a href="https://www.kickstarter.com/projects/1273236418/orange-and-blue-the-world-of-barzu-english-and-rus" target="_blank" class="w3-btn w3-round-large w3-hover-purple w3-indigo">HERE</a></h3>
+                <h3 class="info">Главная страница проекта на английском языке находится
+                    <a href="https://www.kickstarter.com/projects/1273236418/orange-and-blue-the-world-of-barzu-english-and-rus" target="_blank" class="w3-btn w3-round-large w3-hover-purple w3-indigo">ЗДЕСЬ</a></h3>
                 <p>При выборе плана не переживайте по поводу языковой версии книги. По окончании кампании по сбору средств я
                     свяжусь с Вами по электронной почте и уточню, на каком языке Вы хотите получить книгу(и) – на русском
                     или на английском.</p>
@@ -190,7 +190,7 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-                <p>И, конечно, я считаю чудом, что, не смотря на свою занятость, уважаемый Фаррух-Ака согласился иллюстрировать
+                <p>И, конечно, я считаю чудом, что, несмотря на свою занятость, уважаемый Фаррух-Ака согласился иллюстрировать
                     книгу! Ведь именно с его графики все и началось. Кто еще смог бы так детально и красочно изобразить все
                     прелести таджикского быта, если не человек, живущий на таджикской земле?! </p>
             </div>
@@ -256,7 +256,7 @@
                     в 2005 году в Душанбе; будучи соседями, мы стали хорошими друзьями. У Фарруха трое детей и четверо внуков.
                     Он окончил Московскую среднюю художественную школу (МСХШ) при Академии Художеств СССР, а затем в 1982
                     стал выпускником Московского государственного художественного института им. В. И. Сурикова. Его работы
-                    представлены в галлереях и частных коллекциях всего мира. Некоторые из них можно увидеть
+                    представлены в галереях и частных коллекциях всего мира. Некоторые из них можно увидеть
                     <a href="http://farrukhnegmatzade.com/product-category/paintings/" target="_blank">здесь:</a></p>
             </div>
         </div>
@@ -320,7 +320,7 @@
                     </header>
                     <div class="w3-container">
                         <p>Четыре эксклюзивных черно-белых круглых значка с изображениями по мотивам книги. Эти значки очень
-                            интересно смотрятся и на пальто, и на джинсовых курточке или жакете, и на головном уборе, и на
+                            интересно смотрятся и на пальто, и на джинсовой курточке или жакете, и на головном уборе, и на
                             рюкзаке.
                         </p>
                         <img src="img/pin2.jpg" alt="" class="img-responsive" width="250">
@@ -337,7 +337,7 @@
                     </header>
                     <div class="w3-container">
                         <p>Четыре эксклюзивных разноцветных круглых значка. На них изображены части иллюстраций из книги. Эти
-                            значки очень интересно смотрятся и на пальто, и на джинсовых курточке или жакете, и на головном
+                            значки очень интересно смотрятся и на пальто, и на джинсовой курточке или жакете, и на головном
                             уборе, и на рюкзаке.</p>
                         <img src="img/pin3.jpg" alt="" class="img-responsive" width="250">
                     </div>
